--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "cssnano": "^3.10.0",
     "gulp": "latest",
     "gulp-babel": "^7.0.1",
-    "gulp-concat": "latest",
+    "gulp-concat": "^2.6.1",
+    "gulp-declare": "^0.3.0",
+    "gulp-handlebars": "^5.0.2",
     "gulp-postcss": "latest",
     "gulp-rename": "^1.2.2",
     "gulp-watch": "latest",
+    "gulp-wrap": "^0.13.0",
     "postcss-cssnext": "latest",
     "postcss-inline-svg": "latest",
     "postcss-normalize": "^4.0.0",
@@ -24,6 +27,8 @@
     "gulp-file-include": "latest",
     "gulp-imagemin": "latest",
     "postcss-nested": "^2.0.4",
+    "handlebars": "~4.0",
+    "through2": "~2.0",
     "postcss-svgo": "latest"
   }
 }
