--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-declare": "^0.3.0",
     "gulp-handlebars": "^5.0.2",
+    "gulp-imagemin": "^4.1.0",
     "gulp-postcss": "latest",
     "gulp-rename": "^1.2.2",
     "gulp-watch": "latest",
@@ -25,7 +26,6 @@
   },
   "dependencies": {
     "gulp-file-include": "latest",
-    "gulp-imagemin": "latest",
     "postcss-nested": "^2.0.4",
     "handlebars": "~4.0",
     "through2": "~2.0",
