--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-concat": "latest",
     "gulp-postcss": "latest",
     "gulp-rename": "^1.2.2",
+    "gulp-svg-sprite": "^1.4.0",
     "gulp-watch": "latest",
     "normalize.css": "latest",
     "postcss-cssnext": "latest",
