--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template",
+  "name": "start-template",
   "version": "1.0.0",
   "description": "",
   "author": "idimov",
@@ -11,9 +11,11 @@
     "cssnano": "^3.10.0",
     "gulp": "latest",
     "gulp-babel": "^7.0.1",
-    "gulp-concat": "latest",
+    "gulp-babel-minify": "^0.4.3",
+    "gulp-concat": "^2.6.1",
     "gulp-postcss": "latest",
     "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-svg-sprite": "^1.4.0",
     "gulp-watch": "latest",
     "normalize.css": "latest",
