--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-es2016": "^7.0.0-beta.53",
     "babel-core": "latest",
     "babel-preset-es2015": "latest",
+    "babel-register": "^6.26.0",
     "browser-sync": "latest",
     "cssnano": "^3.10.0",
-    "gulp": "latest",
+    "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
-    "gulp-babel-minify": "^0.4.3",
+    "gulp-babel-minify": "^0.5.1",
     "gulp-concat": "^2.6.1",
     "gulp-postcss": "latest",
     "gulp-rename": "^1.2.2",
